[package]
name = "chari-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
des = "0.8"
cbc = "0.1"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22"
js-sys = "0.3"

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
